--- a/Frame.html
+++ b/Frame.html
@@ -28,7 +28,7 @@
 <area shape="rect" coords="10,286,66,297" href="tabs.html" target="Principal">
 <area shape="rect" coords="9,299,37,311" href="mp3.html" target="Principal">
 <area shape="rect" coords="10,76,52,88" href="revistas.html" target="Principal">
-<area shape="rect" coords="10,353,89,364" href="http://www.angelfire.com/rock/poisonapple/principal.html" target="Principal">
+<area shape="rect" coords="10,353,89,364" href="Principal.html" target="Principal">
 <area shape="rect" coords="9,366,77,378" href="mapa.html" target="Principal">
 <area shape="rect" coords="11,178,115,193" href="sessoes.html" target="Principal">
 <area shape="rect" coords="10,234,51,245" href="outras.html" target="Principal">
